[package]
name = "rust-kv"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_operations"
path = "examples/basic_operations.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.59"
bytes = "1.6.0"
prost = "0.12.4"
crc32fast = "1.4.0"
crossbeam-skiplist = "0.1.3"
jammdb = "0.11.0"
